Added aadhar and pan in storage schema
