# server/api/services/storage.service.js
@@ -26,6 +26,8 @@ class StorageService {
           city: storage.data().city,
           state: storage.data().state,
           location: storage.data().location,
+          aadhar: storage.data().aadhar,
+          pan: storage.data().pan,
           phone: storage.data().phone,
           images: storage.data().images,
           pricing: storage.data().pricing,
@@ -59,6 +61,8 @@ class StorageService {
           city: storage.data().city,
           state: storage.data().state,
           location: storage.data().location,
+          aadhar: storage.data().aadhar,
+          pan: storage.data().pan,
           phone: storage.data().phone,
           images: storage.data().images,
           pricing: storage.data().pricing,
